Some minor fixes

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -71,8 +71,8 @@
    "metadata": {},
    "source": [
     "## Demo Client Setup\n",
-    "We instantiate a client to interact with the platform.<br>\n",
-    "The client dynamically registers with the Authorisation Server to take part in UMA (User Managed Access) flows through which authorization is obtained for scoped access resources on behalf of the user."
+    "We now instantiate a client to interact with the platform.<br>\n",
+    "The client dynamically registers with the Authorization Server to take part in UMA (User Managed Access) flows through which authorization is obtained for scoped access resources on behalf of the user."
    ]
   },
   {
@@ -102,7 +102,7 @@
     "We require an authenticated user to interact with some of the platform endpoints - in particular for eoepca v0.3 the ADES.<br>\n",
     "User authenticates and the client receives an ID Token (JWT) that represents the user.<br>\n",
     "For convenience within the Jupyter notebook we use a username/password authentication - but the primary mechanism is to rely upon external identity provision.<br>\n",
-    "Currently login with GitHub is supported."
+    "Currently, login with GitHub is supported."
    ]
   },
   {
@@ -115,7 +115,7 @@
    "outputs": [],
    "source": [
     "#-------------------------------------------------------------------------------\n",
-    "# Authenticate as user 'demoA' and get ID Token\n",
+    "# Authenticate as user 'eric' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
     "USER_NAME=\"eric\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
@@ -147,9 +147,9 @@
    "id": "9b4b0ad8-7bc6-4950-ae10-cd10af55d45e",
    "metadata": {},
    "source": [
-    "In this part of the demo, Eric uses the system level resource catalogue endpoint to discover data collections and datasets.\n",
+    "In this part of the demo, Eric uses the system level resource catalogue endpoint to discover data collections and datasets.  The system level resource catalogue enables discovery of data available to all users.\n",
     "\n",
-    "[OWSLib](https://geopython.github.io/OWSLib) is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we’ll work with the CSW, WMS and WCS interfaces.\n",
+    "[OWSLib](https://geopython.github.io/OWSLib) is a Python package for client programming with Open Geospatial Consortium (OGC) web service (hence OWS) interface standards, and their related content models. In this demo we will work with the CSW, WMS and WCS interfaces.\n",
     "\n",
     "The `owslib.csw` class of OWSLib is instantiated and service metadata are shown."
    ]
@@ -198,7 +198,7 @@
    "id": "8091a9b6-bc74-4824-b032-0e50477532ee",
    "metadata": {},
    "source": [
-    "Eric can make a GetRecords request to get all records of the catalogue, with a page limit of 10."
+    "Eric can make a GetRecords request to get all records of the catalogue, with a page size of 10."
    ]
   },
   {
@@ -217,7 +217,7 @@
    "id": "271a402f-9ef0-408b-8ea4-4fe9b3934184",
    "metadata": {},
    "source": [
-    "Eric wishes to discover data with usage of filters, an OGC Filter can be used. Here we demonstrate how to create spatial (`bbox`), temporal (`time`), and attribute (`apiso:CloudCover`) filters combined with logical operators like and/or"
+    "Eric wishes to discover data with specific search criteria. Here we demonstrate how to create spatial (`bbox`), temporal (`time`), and attribute (`apiso:CloudCover`) filters combined with logical operators like And/Or. An OGC Filter is created and sent to the Resource Catalogue:"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "id": "19822cd1-9772-4195-902a-9aea10e2131f",
    "metadata": {},
    "source": [
-    "Eric selects one record with the identifier and discovers the available links"
+    "Eric selects one record using the identifier and discovers the available links:"
    ]
   },
   {
@@ -332,9 +332,7 @@
    "id": "9225e423-fdc1-4918-996e-454d817ac135",
    "metadata": {},
    "source": [
-    "Eric can also use a generic OpenSearch client to query the Resource Catalogue.\n",
-    "\n",
-    "Eric can also include parameters in the search, like the parent identifier for collection level search"
+    "Eric can also use a generic OpenSearch client to query the Resource Catalogue, including parameters in the search, like the parent identifier for collection level search:"
    ]
   },
   {
@@ -365,7 +363,7 @@
    "source": [
     "Eric has already discovered the dataset to use by using the OWSLib CSW client.\n",
     "\n",
-    "Using the [geolinks](https://github.com/geopython/geolinks) Python library, Eric can filter the links that are of a specific type (here WMS and WCS links to be used for visualization)"
+    "Using the [geolinks](https://github.com/geopython/geolinks) Python library, Eric can filter the links that are of a specific type (here WMS and WCS links to be used for visualization):"
    ]
   },
   {
@@ -377,7 +375,7 @@
    "source": [
     "system_endpoint = 'https://resource-catalogue.demo.eoepca.org/'\n",
     "csw = CatalogueServiceWeb(system_endpoint, timeout=30)\n",
-    "scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
+    "scene_id = 'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
     "csw.getrecordbyid(id=[scene_id])\n",
     "links = csw.records[scene_id].references\n",
     "for link in links:\n",
@@ -392,7 +390,7 @@
    "id": "584239d3-e4f0-4fe1-9794-6977f62ee55c",
    "metadata": {},
    "source": [
-    "After discovering the dataset, Eric can identify the WMS link and use the OWSLib WMs client to visualize the dataset"
+    "After discovering the dataset, Eric can identify the WMS link and use the OWSLib WMS client to visualize the dataset"
    ]
   },
   {
@@ -403,7 +401,7 @@
    "outputs": [],
    "source": [
     "wms = WebMapService(wms_endpoint, version='1.3.0')\n",
-    "wms[scene_id].title\n"
+    "list(wms.contents)"
    ]
   },
   {
@@ -413,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list(wms.contents)"
+    "wms[scene_id].title"
    ]
   },
   {
@@ -421,7 +419,7 @@
    "id": "682252a2-4ca6-4ebd-90bc-80f9b8e863ae",
    "metadata": {},
    "source": [
-    "Eric can visualize the WMS GetMap request from matplotlib"
+    "Eric can now visualize the WMS GetMap request from matplotlib:"
    ]
   },
   {
@@ -436,18 +434,17 @@
     "import matplotlib.image as mpimg\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def getMap(wms,layerName,bbox,filename):\n",
+    "def get_map(wms, layer_name, bbox, filename):\n",
     "    wms.getOperationByName('GetMap').formatOptions\n",
-    "    img = wms.getmap(layers=[layerName],\n",
-    "                 size=(600,300),\n",
-    "                 srs='EPSG:4326',\n",
-    "                 bbox=bbox,\n",
-    "                 format='image/png',\n",
-    "                 transparent=True)\n",
+    "    img = wms.getmap(layers=[layer_name],\n",
+    "                     size=(600,300),\n",
+    "                     srs='EPSG:4326',\n",
+    "                     bbox=bbox,\n",
+    "                     format='image/png',\n",
+    "                     transparent=True)\n",
     "\n",
-    "    tmpfile = open(filename,'wb')\n",
-    "    tmpfile.write(img.read())\n",
-    "    tmpfile.close()"
+    "    with open(filename,'wb') as tmpfile:\n",
+    "        tmpfile.write(img.read())"
    ]
   },
   {
@@ -457,10 +454,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getMap(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__TRUE_COLOR',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
-    "image1=mpimg.imread('rgb.png')\n",
+    "get_map(wms,'S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE__TRUE_COLOR',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
+    "image1 = mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
-    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "img1 = plt.imshow(image1, extent=[13.8,15.1,36.9,37.9], aspect='auto')\n",
     "plt.show()"
    ]
   },
@@ -470,7 +467,8 @@
    "metadata": {},
    "source": [
     "## Processing - ADES\n",
-    "The ADES provides WPS 1.0/2.0 and API Processes interfaces - with extensions for process deploy/undeploy.<br>\n",
+    "The ADES provides WPS 1.0/2.0 and OGC API - Processes interfaces - with extensions for deploying and undeploying processes.\n",
+    "\n",
     "The ADES provides user-specific endpoints, using a URL path prefix."
    ]
   },
@@ -483,8 +481,12 @@
    "source": [
     "# ADES URLs\n",
     "ades_base_url = \"http://ades.\" + platform_domain\n",
-    "ades_wps_url = ades_base_url + \"/\" + USER_NAME + \"/zoo\"; print(\"ADES WPS endpoint:\", ades_wps_url)\n",
-    "ades_proc_url = ades_base_url + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)\n",
+    "\n",
+    "ades_wps_url = ades_base_url + \"/\" + USER_NAME + \"/zoo\"\n",
+    "print(\"ADES WPS endpoint:\", ades_wps_url)\n",
+    "\n",
+    "ades_proc_url = ades_base_url + \"/\" + USER_NAME + \"/wps3\"\n",
+    "print(\"ADES API Processes endpoint:\", ades_proc_url)\n",
     "\n",
     "# Init\n",
     "ades_access_token = None\n",
@@ -1017,7 +1019,7 @@
    "outputs": [],
    "source": [
     "workspace_endpoint = 'https://resource-catalogue.rm-user-eric.185.52.193.87.nip.io'\n",
-    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30)\n",
+    "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "csw.results"
    ]
@@ -1044,6 +1046,7 @@
     "csw.getrecordbyid(id=[scene_id])\n",
     "links = csw.records[scene_id].references\n",
     "csw.records['INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808'].references\n",
+    "\n",
     "for link in links:\n",
     "    scheme = link['scheme']\n",
     "    if 'WMS' in scheme:\n",
@@ -1080,9 +1083,9 @@
    "outputs": [],
    "source": [
     "getMap(wms,'INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808',(13.8,36.9,15.1,37.9), 'rgb.png')\n",
-    "image1=mpimg.imread('rgb.png')\n",
+    "image1 = mpimg.imread('rgb.png')\n",
     "fig = plt.figure(figsize=(12,7))\n",
-    "img1=plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
+    "img1 = plt.imshow(image1,extent=[13.8,15.1,36.9,37.9],aspect='auto')\n",
     "plt.show()"
    ]
   }
