ADES Processing demo section update

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -111,8 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_id = \"s-expression\"\n",
-    "app_version = \"0_0_2\"\n",
+    "app_id = \"nhi\"\n",
+    "app_version = \"0_0_3\"\n",
     "application_name = f\"{app_id}-{app_version}\""
    ]
   },
@@ -517,7 +517,6 @@
    "source": [
     "# ADES URLs\n",
     "ades_base_url = f\"http://ades.test.{base_domain}\"\n",
-    "\n",
     "ades_wps_url = f\"{ades_base_url}/{USER_NAME}/zoo\"\n",
     "print(\"ADES WPS endpoint:\", ades_wps_url)\n",
     "\n",
@@ -669,6 +668,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14449f45-f64c-4ed2-8c90-e56b3e151f3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retrieve job id from the Location header of the response\n",
+    "jobid = response.headers[\"Location\"].rsplit('/', 1)[-1]\n",
+    "print(jobid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "retired-dylan",
    "metadata": {},
@@ -756,6 +767,98 @@
     "response, ades_access_token, stacCatalogUri = demo.proc_get_job_result(ades_base_url, job_location_path, id_token=user_id_token, access_token=ades_access_token)\n",
     "demo.response_summary(response)\n",
     "print(\"stacCatalogUri:\", stacCatalogUri)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5423ed03-6c81-459b-9e9f-6fbba6b10246",
+   "metadata": {},
+   "source": [
+    "**Inspecting the processing results**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76fd32a7-49cb-415a-898b-d3a0465ad0bd",
+   "metadata": {},
+   "source": [
+    "Retrieve access information to the user workspace S3 bucket (bucket name, access key and secret access key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20a473f1-279f-40d6-b547-dc8806087d53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Init\n",
+    "workspace_url = \"https://workspace-api.\" + base_domain\n",
+    "workspace_access_token = None\n",
+    "\n",
+    "# Workspace - Get Details\n",
+    "workspace_name = \"rm-user-\" + USER_NAME.lower()\n",
+    "response, workspace_access_token = demo.workspace_get_details(workspace_url, workspace_name, id_token=user_id_token, access_token=workspace_access_token)\n",
+    "workspace_details = response.json()\n",
+    "\n",
+    "# Bucket details\n",
+    "bucket_name = workspace_details[\"storage\"][\"credentials\"][\"bucketname\"]\n",
+    "s3_access = workspace_details[\"storage\"][\"credentials\"][\"access\"]\n",
+    "s3_secret = workspace_details[\"storage\"][\"credentials\"][\"secret\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cbc55c-50ec-4bed-b1e4-29044edb7ef8",
+   "metadata": {},
+   "source": [
+    "Print the content of the result stac catalog file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9baf5a4a-e722-4fcd-8d66-4f855fa42f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quick hack S3 access\n",
+    "import boto3\n",
+    "\n",
+    "# Init S3 session for Creodias\n",
+    "S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
+    "session = boto3.session.Session()\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "\n",
+    "# Retrieve S3 key path of the catalog.json\n",
+    "stacCatalogUriS3Key = \"/\".join(stacCatalogUri.rsplit('/', 2)[-2:])\n",
+    "print(f\"Content of {stacCatalogUriS3Key} :\\n\")\n",
+    "\n",
+    "# Printing catalog.json\n",
+    "obj = s3resource.Object(bucket_name, stacCatalogUriS3Key)\n",
+    "catalogJson = json.loads(obj.get()['Body'].read().decode('utf-8'))\n",
+    "print(json.dumps(catalogJson, indent=4, sort_keys=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82d96c58-83c8-4989-be74-eb3da161d5ba",
+   "metadata": {},
+   "source": [
+    "List all the files contained in the result folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "593b7ae5-02a7-497e-b279-b9c940fdeabe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List result contents\n",
+    "bucket = s3resource.Bucket(bucket_name)\n",
+    "for obj in bucket.objects.filter(Prefix=f\"wf-{jobid}/\"):\n",
+    "    print(obj.key)"
    ]
   },
   {
