EOEPCA-289 add some TODOs

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "# Extract the URL for the Application Package\n",
-    "# TODO - need to extract http URL for AP\n",
+    "# TODO [Angelos] - need to extract http URL for AP\n",
     "application_package_url = \"TBD\"\n",
     "print(f\"Application Package URL = {application_package_url}\")"
    ]
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_record = list(csw.records)[0]\n",
+    "selected_record = list(csw.records)[0] # TODO [Angelos] - check which is the best scene\n",
     "csw.getrecordbyid(id=[selected_record])\n",
     "rec = csw.records[selected_record]\n",
     "rec.title"
@@ -720,6 +720,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO - fix problem with occasional 504 responses from the ades\n",
+    "#   - either fix in the ades\n",
+    "#   - or handle in the demo client\n",
     "# API Processes - Job Status (keep polling for completion)\n",
     "response, ades_access_token, status = demo.proc_poll_job_completion(ades_base_url, job_location_path, interval=10, id_token=user_id_token, access_token=ades_access_token)"
    ]
@@ -1058,10 +1061,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_id='INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808'\n",
+    "# TODO - need to select the correct scene-id output from the processing\n",
+    "scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737'\n",
     "csw.getrecordbyid(id=[scene_id])\n",
     "links = csw.records[scene_id].references\n",
-    "csw.records['INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808'].references\n",
+    "csw.records[scene_id].references\n",
     "\n",
     "for link in links:\n",
     "    scheme = link['scheme']\n",
