Catalogue date filter fixed

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -132,8 +132,8 @@
    "outputs": [],
    "source": [
     "# TODO [Angelos] - Alice's workspace not working\n",
-    "#alice_workspace_endpoint = f'https://resource-catalogue.rm-user-alice.{base_domain}'\n",
-    "alice_workspace_endpoint = f'https://resource-catalogue.user.{base_domain}'\n",
+    "alice_workspace_endpoint = f'https://resource-catalogue.rm-user-alice.{base_domain}'\n",
+    "#alice_workspace_endpoint = f'https://resource-catalogue.user.{base_domain}'\n",
     "csw = CatalogueServiceWeb(alice_workspace_endpoint,timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
     "print(\"Alice's workspace records:\")\n",
@@ -264,8 +264,8 @@
    "outputs": [],
    "source": [
     "bbox_query = BBox([37, 13.9, 37.9, 15.1])\n",
-    "begin = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-02 00:00')\n",
-    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-02 23:59')\n",
+    "begin = PropertyIsGreaterThanOrEqualTo(propertyname='apiso:TempExtent_begin', literal='2021-04-02 00:00')\n",
+    "end = PropertyIsLessThanOrEqualTo(propertyname='apiso:TempExtent_end', literal='2021-04-03 00:00')\n",
     "cloud = PropertyIsLessThanOrEqualTo(propertyname='apiso:CloudCover', literal='20')\n",
     "filter_list = [\n",
     "    And(\n",
@@ -287,9 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO [Angelos] - check the dates on the ingested scenes\n",
     "for rec in csw.records:\n",
-    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\n')"
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].identification.identtype}\\ntitle: {csw.records[rec].identification.title}\\ndate: {csw.records[rec].datetimestamp}\\n')"
    ]
   },
   {
@@ -358,33 +357,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO [Angelos] - rename variable to pass to ades\n",
-    "url=f'{system_catalogue_endpoint}/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids={selected_record}'\n",
+    "atom_dataset_url=f'{system_catalogue_endpoint}/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids={selected_record}'\n",
     "S = requests.Session()\n",
-    "R = S.get(url=url)\n",
+    "R = S.get(url=atom_dataset_url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
     "print(bs.prettify())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cathedral-albany",
-   "metadata": {},
-   "source": [
-    "Eric can also use a generic OpenSearch client to query the Resource Catalogue, including parameters in the search, like the parent identifier for collection level search:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "instant-fabric",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opensearch_endpoint=f'{system_catalogue_endpoint}/?service=CSW&version=3.0.0&request=GetCapabilities&mode=opensearch'\n",
-    "client = pyops.Client(description_xml_url=opensearch_endpoint)\n",
-    "results = client.search(params={\"{eo:parentIdentifier?}\": {\"value\": \"S2MSI2A\"}})\n",
-    "len(results)"
    ]
   },
   {
