--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_record = list(csw.records)[0] # TODO [Angelos] - check which is the best scene\n",
+    "selected_record = list(csw.records)[0]\n",
     "csw.getrecordbyid(id=[selected_record])\n",
     "rec = csw.records[selected_record]\n",
     "rec.title"
