EOEPCA-289 dynamic creation of deploy & execute POST request bodies

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -540,7 +540,10 @@
     "**POST {service_url}/processes**<br>\n",
     "Deploy application to the ADES.<br>\n",
     "Request body is json in the same format as defined for an Execute request (ref. API Processes), in which the input is the Application Package describing the application.<br>\n",
-    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/atom+xml_** or **_application/cwl_**."
+    "The Application Package is a CWL Workflow that is typically provided as an href with content type **_application/atom+xml_** or **_application/cwl_**.\n",
+    "\n",
+    "**_Application Deployment Payload_**<br>\n",
+    "Use a helper script to create the POST body for the application deployment request, using the Application Package URL discovered earlier."
    ]
   },
   {
@@ -550,9 +553,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO - dynamic insertion of AP URL into deploy POST body\n",
-    "# something like...\n",
-    "# sed -e 's/APPLICATION_PACKAGE_URL/<ap-url>/' demoroot/data/app-deploy-body-template.json"
+    "os.system(f'../data/create-deploy-body-cwl.sh \"{application_package_url}\"')\n",
+    "!cat ../data/app-deploy-body-cwl.json"
    ]
   },
   {
@@ -622,7 +624,10 @@
     "**POST {service_url}/processes/{application_name}/jobs**<br>\n",
     "Request body is json as defined by API Processes to define the inputs and outputs, consistent with the CWL Workflow application package.<br>\n",
     "The response returns **201 CREATED** to indicate that the job has been successfully initiated.<br>\n",
-    "The response **Location header** provides the path (/processes/{application_name}/jobs/{job_id}) to follow the job status."
+    "The response **Location header** provides the path (/processes/{application_name}/jobs/{job_id}) to follow the job status.\n",
+    "\n",
+    "**_Application Execution Payload_**<br>\n",
+    "Use a helper script to create the POST body for the application execution request, using the Input Data URL discovered earlier."
    ]
   },
   {
@@ -632,7 +637,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO - dynamic insertion of discovered input URL into execute POST body"
+    "# TODO - update the 'url' variable name\n",
+    "# url = \"https://resource-catalogue.185.52.193.87.nip.io/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids=S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE\"\n",
+    "os.system(f'../data/create-execute-body.sh \"{url}\"')\n",
+    "!cat ../data/app-execute-body.json"
    ]
   },
   {
