EOEPCA-289 Add section for IAM

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -359,6 +359,7 @@
    "outputs": [],
    "source": [
     "atom_dataset_url=f'{system_catalogue_endpoint}/?mode=opensearch&service=CSW&version=3.0.0&request=GetRecords&elementsetname=full&resulttype=results&typenames=csw:Record&recordids={selected_record}'\n",
+    "print(f\"Input data OpenSearch URL: {atom_dataset_url}\\n\")\n",
     "S = requests.Session()\n",
     "R = S.get(url=atom_dataset_url)\n",
     "bs = BeautifulSoup(R.text, 'xml')\n",
@@ -729,7 +730,7 @@
    "source": [
     "### ADES Stage-out\n",
     "At the successful completion of processing, the ADES stages out the results to platform storage (under the direction of the user's Workspace component), and registers the data in the User Workspace for access and further exploitation.<br>\n",
-    "![ADES processing results stage-out](https://raw.githubusercontent.com/EOEPCA/eoepca/develop/technical/workspace/seq-ades-processing-results-stage-out.png)"
+    "![ADES processing results stage-out](https://github.com/EOEPCA/eoepca/raw/develop/technical/workspace/seq-ades-processing-results-stage-out.png)"
    ]
   },
   {
@@ -1007,146 +1008,251 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sexual-decrease",
+   "id": "ec7730f0-6762-4b89-bffb-b9ef7154ed48",
    "metadata": {},
    "source": [
-    "## Policy Enforcement and Resource Sharing\n",
-    "Owners of resources can choose to share these with other users by updating the access policies"
+    "## Identity and Access Management"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aggressive-chess",
+   "id": "cd6d7541-d891-45b4-b54e-8bb2e49b98dc",
    "metadata": {},
    "source": [
-    "### Deploy Application\n",
-    "The demo user redeploys de application"
+    "### Authentication - User Bob"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guided-maker",
-   "metadata": {},
+   "id": "16f3f871-4f87-4759-b240-a7866743dcb4",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# API Processes - Deploy Application\n",
-    "response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-atom.json\", id_token=user_id_token, access_token=ades_access_token)"
+    "#-------------------------------------------------------------------------------\n",
+    "# Authenticate as user 'bob' and get ID Token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "USER_BOB=\"demoa\"\n",
+    "USER_BOB_PASSWORD=\"defaultPWD\"\n",
+    "bob_id_token = demo.get_id_token(USER_BOB, USER_BOB_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57a471b4-e9e2-420b-9ec4-1ad1daecb3ff",
+   "metadata": {},
+   "source": [
+    "#### Inspect the ID Token\n",
+    "The ID Token (JWT) identifies the user via user_name / sub (Subject) fields, and the client via the aud (Audience) field. The JWT is signed and can be verified, using the kid (Key ID) field, via the JWKS endpoint of the Authorization Server."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bacterial-slope",
+   "id": "bcad182e-dc5a-4759-b426-617e6dfd8311",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Check deploy - list processes again\n",
-    "response, process_ids, ades_access_token = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
+    "# Inspect ID Token\n",
+    "jwt_header = jwt.get_unverified_header(bob_id_token)\n",
+    "jwt_payload = jwt.decode(bob_id_token, options={\"verify_signature\": False})\n",
+    "print(\"JWT Header:\", json.dumps(jwt_header, indent = 2), \"\\n---\\nJWT Payload:\", json.dumps(jwt_payload, indent = 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2222392-743e-40a9-8f17-f9d7a635bb2d",
+   "metadata": {},
+   "source": [
+    "### Authorization - UMA Flow\n",
+    "![UMA Flow](https://github.com/EOEPCA/eoepca/raw/develop/technical/user-management/seq-uma-flow.png)<br>\n",
+    "**Relying Party Token (RPT)** encapsulates the authorization decision. It authorizes the client with scoped access to the resource on behalf of the user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a95c312d-1ada-4d68-8e30-3c31116639b8",
+   "metadata": {},
+   "source": [
+    "For example, Bob lists Eric's processes..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e143c16-e02d-4128-9c27-f140ccf406e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo.trace_flow = True\n",
+    "ades_access_token = None\n",
+    "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=bob_id_token, access_token=ades_access_token)\n",
+    "demo.trace_flow = False\n",
     "print(\"Processes:\", process_ids)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "handled-literature",
+   "id": "37cf0abd-246e-4640-b713-81f557669f80",
    "metadata": {},
    "source": [
-    "### UserB Authenticates in the Platform\n",
-    "User authenticates and the client receives an ID Token (JWT) that represents the user."
+    "### Bob get details of Eric's deployed application [ACCESS DENIED]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handy-struggle",
-   "metadata": {},
+   "id": "670ec4fd-96b8-4b86-b1d2-b58c44299aee",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "#-------------------------------------------------------------------------------\n",
-    "# Authenticate as UserB and get ID Token\n",
-    "#-------------------------------------------------------------------------------\n",
-    "USERB_NAME=\"demoB\"\n",
-    "USERB_PASSWORD=\"defaultPWD\"\n",
-    "userb_id_token = demo.get_id_token(USERB_NAME, USERB_PASSWORD)"
+    "# API Processes - Get Application Details\n",
+    "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, application_name, id_token=bob_id_token, access_token=ades_access_token)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "pressed-gardening",
+   "id": "3c38ff46-9587-4ab9-b093-295b117cfe07",
    "metadata": {},
    "source": [
-    "### UserB Attempts to Execute Demo User Apps\n",
-    "All resources are registered with ownership policies by default"
+    "### Eric updates policy to allow Bob to view the application details\n",
+    "Important endpoints:\n",
+    "* **ADES Resources Endpoint**<br>\n",
+    "  The ADES is protected by a PEP (Policy Enforcement Point).<br>\n",
+    "  The PEP provides a specific endpoint through which the ADES dynamically manages its protected resources.\n",
+    "* **Policy Decision Point (PDP)**<br>\n",
+    "  The PDP maintains the platform authorization policies."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "differential-detective",
+   "id": "6973720a-0086-4ecc-88e8-eddd5e7298c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------------------------------------------------------------\n",
-    "# Unauthorized Execution \n",
-    "# Expected Value: 401\n",
-    "#-------------------------------------------------------------------------------\n",
-    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, application_name, \"../data/app-execute-body.json\", id_token=None, access_token=None)"
+    "ades_resources_endpoint = f\"http://ades.resources.{base_domain}\"\n",
+    "pdp_url = f\"http://test.{base_domain}/pdp\"\n",
+    "print(f\"ADES PEP Resources: {ades_resources_endpoint}\\nPolicy Decision Point: {pdp_url}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "consistent-petite",
+   "id": "5883218b-f8d5-4eda-86a0-7491b5fcb781",
    "metadata": {},
    "source": [
-    "### Owner Updates Access Policy\n",
-    "Grants access to UserB to execute the deployed app"
+    "#### Policy Update: Each user has a unique ID within the platform\n",
+    "The user IDs are needed in the policy specification"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "assisted-auditor",
+   "id": "567c4c6c-7d36-4cd4-9aaf-28e6c1f6678e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#-------------------------------------------------------------------------------\n",
-    "# Get Ownership Id\n",
+    "# Get Subject IDs from user JWT ID tokens\n",
     "#-------------------------------------------------------------------------------\n",
-    "owB = demo.get_ownership_id(userb_id_token)\n",
-    "owA = demo.get_ownership_id(user_id_token)\n",
+    "eric_identifier = demo.get_ownership_id(user_id_token)\n",
+    "bob_identifier = demo.get_ownership_id(bob_id_token)\n",
+    "print(f\"Subject IDs: Eric => {eric_identifier}, Bob => {bob_identifier}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca77f5b-7313-47eb-be29-087661f21200",
+   "metadata": {},
+   "source": [
+    "#### Policy Update: Each resource is uniquely identified in the policy database\n",
+    "The resource ID is needed in the policy specification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae82115-9939-4f7b-bd5d-e9d5a8626318",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Each resource has a unique identifier\n",
+    "application_resource_id = demo.get_resource_by_name(ades_resources_endpoint, application_name, user_id_token)\n",
+    "print(f\"ID for resource '{application_name}' of user {USER_NAME} => {application_resource_id}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c71178-adac-404a-9568-df47ff787446",
+   "metadata": {},
+   "source": [
+    "#### Policy Update: Update the policy @ the PDP (Policy Decision Point)\n",
+    "Add Bob to the list of users with privilege to access the application resource."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "662c680b-5d3a-4ba2-85de-d8143422295f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Updated policy\n",
+    "policy = {\n",
+    "  \"name\": \"Updated App Details\",\n",
+    "  \"description\": \"modified\",\n",
+    "  \"config\": {\n",
+    "    \"resource_id\": application_resource_id,\n",
+    "    \"action\": \"view\",\n",
+    "    \"rules\": [\n",
+    "      {\n",
+    "        \"OR\": [\n",
+    "          {\n",
+    "            \"EQUAL\": {\n",
+    "              \"id\": eric_identifier\n",
+    "            }\n",
+    "          },\n",
+    "          {\n",
+    "            \"EQUAL\": {\n",
+    "              \"id\": bob_identifier\n",
+    "            }\n",
+    "          }\n",
+    "        ]\n",
+    "      }\n",
+    "    ]\n",
+    "  },\n",
+    "  \"scopes\": [\n",
+    "    \"protected_access\"\n",
+    "  ]\n",
+    "}\n",
     "\n",
-    "#-------------------------------------------------------------------------------\n",
-    "# Finds the policy by retrieving a resource_id\n",
-    "# Update policy with allowing access to UserB\n",
-    "#-------------------------------------------------------------------------------\n",
-    "ades_res=\"http://ades.resources.{base_domain}\"\n",
-    "res_id = demo.get_resource_by_name(ades_res, \"s-expression-0_0_2\", user_id_token)\n",
-    "data={'name':'Updated Execution','description':'modified','config':{'resource_id':'res_id','action':'view','rules':[{'OR':[{'EQUAL':{'id':'owA'}},{'EQUAL':{'id':'owB'}}]}]},'scopes':['protected_access']}\n",
-    "pdp_url= \"http://test.{base_domain}/pdp\"\n",
-    "resp, text= demo.update_policy(pdp_url, data, res_id, user_id_token)"
+    "response, text = demo.update_policy(pdp_url, policy, application_resource_id, user_id_token)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "homeless-employment",
+   "id": "95776493-2e95-4da0-b5b0-35014af4b146",
    "metadata": {},
    "source": [
-    "### UserB Executes Application Succesfully\n",
-    "Shared resources can now be executed"
+    "### REPEAT ATTEMPT: Bob get details of Eric's deployed application"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accessory-yemen",
-   "metadata": {},
+   "id": "27af0cca-8c3b-4cb8-b21d-e2e3892c574e",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "#-------------------------------------------------------------------------------\n",
-    "# User B Execute Application Succesfully\n",
-    "# Expected Value: 201\n",
-    "#-------------------------------------------------------------------------------\n",
-    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, application_name, \"../data/app-execute-body.json\", id_token=userb_id_token, access_token=None)"
+    "# API Processes - Get Application Details\n",
+    "response, ades_access_token = demo.proc_get_app_details(ades_proc_url, application_name, id_token=bob_id_token, access_token=ades_access_token)\n",
+    "demo.response_summary(response)"
    ]
   }
  ],
