Updated notebook to get the application package url from Alice's catalogue

--- a/demoroot/notebooks/03 Demo.ipynb
+++ b/demoroot/notebooks/03 Demo.ipynb
@@ -131,12 +131,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO [Angelos] - Alice's workspace not working\n",
     "alice_workspace_endpoint = f'https://resource-catalogue.rm-user-alice.{base_domain}'\n",
-    "#alice_workspace_endpoint = f'https://resource-catalogue.user.{base_domain}'\n",
     "csw = CatalogueServiceWeb(alice_workspace_endpoint,timeout=30)\n",
     "csw.getrecords2(maxrecords=10)\n",
-    "print(\"Alice's workspace records:\")\n",
+    "print(\"Alice's workspace records:\\n\")\n",
     "for rec in csw.records:\n",
     "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
     "print(f\"URL for Application {app_id}:\")\n",
@@ -151,8 +149,8 @@
    "outputs": [],
    "source": [
     "# Extract the URL for the Application Package\n",
-    "# TODO [Angelos] - need to extract http URL for AP\n",
-    "application_package_url = \"https://app-packages.s3.fr-par.scw.cloud/nhi/app-nhi.dev.0.0.3.cwl\"\n",
+    "application_package_url = csw.records[app_id].references[1]['url']\n",
+    "#application_package_url = \"https://app-packages.s3.fr-par.scw.cloud/nhi/app-nhi.dev.0.0.3.cwl\"\n",
     "print(f\"Application Package URL = {application_package_url}\")"
    ]
   },
